修改函数柯里化

--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -379,7 +379,7 @@ function myNew() {
   // 4.判断返回值类型：
   // 如果是基本值类型，则返回的创建的’空对象‘
   // 如果是引用类型，则返回这个引用类型的对象
-  var flag = ret && ret instanceof Object;
+  var flag = ret && ret instanceof Object
   return flag ? ret : obj
 }
 // test
@@ -548,6 +548,7 @@ xhr.send(null)
 ```
 
 promise 封装实现：
+
 ```js
 function getJSON(url) {
   // 返回一个 promise 对象
@@ -588,9 +589,9 @@ function getJSON(url) {
 }
 ```
 
-# 斐波那契数列（递归+循环）
+# 斐波那契数列（递归，DP，循环）
 
-递归
+- 递归
 
 ```js
 function fiber(n) {
@@ -604,26 +605,39 @@ function fiber(n) {
 console.log(fiber(5))
 ```
 
-循环方式，
+- DP 动态规划
 
 ```js
 function fiber(n) {
-  if (n == 0 || n == 1) {
-    return n
+  if (n === 0 || n === 1) return n
+  var dp = [0, 1]
+  for (let i = 2; i <= n; i++) {
+    dp[i] = dp[i - 1] + dp[i - 2]
   }
-  var arr = [0, 1]
-  for (var i = 2; i <= n; i++) {
-    arr.push(arr[arr.length - 1] + arr[arr.length - 2])
-  }
-  return arr[n]
+  return dp[n]
 }
+```
 
-console.log(fiber(3))
+- 循环
+
+```js
+function fiber(n) {
+  if (n === 0 || n === 1) return n
+  var ret = 1
+  var a = 0
+  var b = 1
+  for (let i = 2; i < n; i++) {
+    a = b
+    b = ret
+    ret = a + b
+  }
+  return ret
+}
 ```
 
 # 数组去重
 
-> 一
+- indexOf()方法
 
 ```js
 function quCh(arr) {
@@ -644,7 +658,7 @@ var arr = [1, 4, 5, 6, 6, 7, 7, 999, 999, 8, 7, 999]
 console.log(quCh(arr))
 ```
 
-> 二
+- set方法
 
 ```js
 function quCh(arr) {
@@ -655,7 +669,7 @@ function quCh(arr) {
 console.log(quCh([1, 2, 2, 3, 4, 4]))
 ```
 
-> 三
+- 循环
 
 ```js
 function quCh(arr) {
@@ -672,7 +686,7 @@ function quCh(arr) {
 console.log(quCh([1, 2, 2, 3, 3, 4, 3, 5, 5]))
 ```
 
-> 四
+- includes()方法
 
 ```js
 function quCh(arr) {
@@ -690,48 +704,55 @@ console.log(quCh([1, 2, 3, 4, 3, 3, 3, 7, 6, 6, 9, 9]))
 
 # 函数柯里化
 
-> 函数的柯里化：curry（又叫部分求值）
->
-> 把接受多个参数的函数变成接受一个参数的函数，并返回一个新的函数；
->
-> 实现方法：用一个闭包，返回一个函数，这个函数每次执行都会改写储存参数的数组，当函数的参数够了之后，便会执行
->
-> 实现一个 add 方法，使计算结果能够满足如下预期：
+[参考链接](https://github.com/mqyqingfeng/Blog/issues/42)
 
-```js
-add(1)(2)(3) = 6
-add(1, 2)(3) = 10
+```
+函数的柯里化：curry（又叫部分求值）
+
+把接受多个参数的函数变成接受一个参数的函数，并返回一个新的函数；
+
+实现方法：用一个闭包，返回一个函数，这个函数每次执行都会改写储存参数的数组，当函数的参数够了之后，便会执行
 ```
 
+ES5 实现
 ```js
-function curry(func) {
-  let _args = []
-  //做成一个闭包
-  function _curry(...args) {
-    _args = _args.concat(args)
-    //如果参数够了就执行
-    if (_args.length >= func.length) {
-      const result = func(..._args)
-      _args = []
-      return result
+function curry(fn, args) {
+  // 获取函数需要的参数长度
+  var length = fn.length
+  args = args || []
+  return function () {
+    // 拼接得到现有的所有参数
+    for (let i = 0; i < arguments.length; i++) {
+      args.push(arguments[i])
     }
-    //继续执行该函数
-    else {
-      return _curry
+    // 判断参数的长度是否已经满足函数所需参数的长度
+    if (args.length >= length) {
+      // 如果满足，执行函数
+      return fn.apply(this, args)
+    } else {
+      // 如果不满足，递归返回科里化的函数，等待参数的传入
+      return curry.call(this, fn, args)
     }
   }
-  return _curry
 }
 
-//测试代码
+// test
 function add(a, b, c) {
   return a + b + c
 }
 
-let testCode = curry(add)
-console.log(testCode(1)(2)(3))
-console.log(testCode(1, 2)(3))
-console.log(testCode(1)(2, 3))
+let test = curry(add)
+console.log(test(1)(2)(3))
+console.log(test(1, 2)(3))
+console.log(test(1)(2, 3))
+```
+
+ES6 实现
+
+```js
+function curry(fn, ...args) {
+  return fn.length <= args.length ? fn(...args) : curry.bind(null, fn, ...args)
+}
 ```
 
 # 水平垂直居中
