--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -1,5 +1,52 @@
 [toc]
 
+# 实现一个闭包
+
+> 闭包小案例
+
+```js
+for (var i = 1; i < 5; i++) {
+  ;(function (j) {
+    setTimeout(function timer() {
+      console.log(j)
+    }, j * 1000)
+  })(i)
+  //闭包的形式解决问题
+  //输出为1，2，3，4
+}
+```
+
+```js
+for (let i = 1; i < 5; i++) {
+  setTimeout(function timer() {
+    console.log(i)
+  }, i * 1000)
+}
+//输出 1,2,3,4
+//let 绑定 for 循环，将其重新绑定到每一次的迭代中，保证每次迭代结束都会重新赋值
+//有自己的作用域块，
+//var 没有自己的作用域快，所以循环变量就会后一个覆盖前一个，循环完毕只有一个值输出；
+for (var i = 0; i < 5; i++) {
+  setTimeout(() => {
+    console.log(i)
+  }, i * 1000)
+}
+// 输出 5,5,5,5
+```
+
+> 闭包的简单实现
+
+```js
+function sum(a) {
+  return function (b) {
+    return a + b
+  }
+}
+
+var result = sum(1)(2)
+console.log(result) // 3
+```
+
 # 函数节流与抖动
 
 scroll 事件本身会触发页面的重新渲染，同时 scroll 事件的 handler 又会被高频度的触发, 因此事件的 handler 内部不应该有复杂操作，例如 DOM 操作就不应该放在事件处理中。
@@ -59,53 +106,6 @@ var throttleRun = throttle(() => {
 }, 2000)
 // 不停的移动鼠标，控制台每隔2s就会打印123
 window.addEventListener('mousemove', throttleRun)
-```
-
-# 实现一个闭包
-
-> 闭包小案例
-
-```js
-for (var i = 1; i < 5; i++) {
-  ;(function (j) {
-    setTimeout(function timer() {
-      console.log(j)
-    }, j * 1000)
-  })(i)
-  //闭包的形式解决问题
-  //输出为1，2，3，4
-}
-```
-
-```js
-for (let i = 1; i < 5; i++) {
-  setTimeout(function timer() {
-    console.log(i)
-  }, i * 1000)
-}
-//输出 1,2,3,4
-//let 绑定 for 循环，将其重新绑定到每一次的迭代中，保证每次迭代结束都会重新赋值
-//有自己的作用域块，
-//var 没有自己的作用域快，所以循环变量就会后一个覆盖前一个，循环完毕只有一个值输出；
-for (var i = 0; i < 5; i++) {
-  setTimeout(() => {
-    console.log(i)
-  }, i * 1000)
-}
-// 输出 5,5,5,5
-```
-
-> 闭包的简单实现
-
-```js
-function sum(a) {
-  return function (b) {
-    return a + b
-  }
-}
-
-var result = sum(1)(2)
-console.log(result) // 3
 ```
 
 # 实现一个 count 函数
@@ -658,7 +658,7 @@ var arr = [1, 4, 5, 6, 6, 7, 7, 999, 999, 8, 7, 999]
 console.log(quCh(arr))
 ```
 
-- set方法
+- set 方法
 
 ```js
 function quCh(arr) {
@@ -715,6 +715,7 @@ console.log(quCh([1, 2, 3, 4, 3, 3, 3, 7, 6, 6, 9, 9]))
 ```
 
 ES5 实现
+
 ```js
 function curry(fn, args) {
   // 获取函数需要的参数长度
@@ -755,13 +756,129 @@ function curry(fn, ...args) {
 }
 ```
 
-# 水平垂直居中
+# 实现一个 flatten 函数（数组降维）
 
-# 三栏布局实现（圣杯布局，双飞燕）
+- 方法一：Array.prototype.flat()
 
-# 深拷贝 浅拷贝
+```js
+var arr1 = [1, 2, [3, 4]]
+arr1.flat()
+// [1, 2, 3, 4]
 
-> 深拷贝
+var arr2 = [1, 2, [3, 4, [5, 6]]]
+arr2.flat()
+// [1, 2, 3, 4, [5, 6]]
+
+var arr3 = [1, 2, [3, 4, [5, 6]]]
+arr3.flat(2)
+// [1, 2, 3, 4, 5, 6]
+
+//使用 Infinity，可展开任意深度的嵌套数组
+var arr4 = [1, 2, [3, 4, [5, 6, [7, 8, [9, 10]]]]]
+arr4.flat(Infinity)
+// [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+```
+
+- 方法二：reduce + concat + isArray + recursivity
+
+```js
+// 使用 reduce、concat 和递归展开无限多层嵌套的数组
+var arr1 = [1, 2, 3, [1, 2, 3, 4, [2, 3, 4]]]
+
+function flatDeep(arr, d = 1) {
+  return d > 0
+    ? arr.reduce(
+        (acc, val) =>
+          acc.concat(Array.isArray(val) ? flatDeep(val, d - 1) : val),
+        []
+      )
+    : arr.slice()
+}
+
+flatDeep(arr1, Infinity)
+// [1, 2, 3, 1, 2, 3, 4, 2, 3, 4]
+```
+
+- 方法三：forEach+isArray+push+recursivity
+
+```js
+// forEach 遍历数组会自动跳过空元素
+const eachFlat = (arr = [], depth = 1) => {
+  const result = [] // 缓存递归结果
+  // 开始递归
+  ;(function flat(arr, depth) {
+    // forEach 会自动去除数组空位
+    arr.forEach((item) => {
+      // 控制递归深度
+      if (Array.isArray(item) && depth > 0) {
+        // 递归数组
+        flat(item, depth - 1)
+      } else {
+        // 缓存元素
+        result.push(item)
+      }
+    })
+  })(arr, depth)
+  // 返回递归结果
+  return result
+}
+
+// for of 循环不能去除数组空位，需要手动去除
+const forFlat = (arr = [], depth = 1) => {
+  const result = []
+  ;(function flat(arr, depth) {
+    for (let item of arr) {
+      if (Array.isArray(item) && depth > 0) {
+        flat(item, depth - 1)
+      } else {
+        // 去除空元素，添加非undefined元素
+        item !== void 0 && result.push(item)
+      }
+    }
+  })(arr, depth)
+  return result
+}
+```
+
+- 方法四：使用堆栈 stack
+
+```js
+// 无递归数组扁平化，使用堆栈
+// 注意：深度的控制比较低效，因为需要检查每一个值的深度
+// 也可能在 shift / unshift 上进行 w/o 反转，但是末端的数组 OPs 更快
+var arr1 = [1, 2, 3, [1, 2, 3, 4, [2, 3, 4]]]
+function flatten(input) {
+  const stack = [...input]
+  const res = []
+  while (stack.length) {
+    // 使用 pop 从 stack 中取出并移除值
+    const next = stack.pop()
+    if (Array.isArray(next)) {
+      // 使用 push 送回内层数组中的元素，不会改动原始输入
+      stack.push(...next)
+    } else {
+      res.push(next)
+    }
+  }
+  // 反转恢复原数组的顺序
+  return res.reverse()
+}
+flatten(arr1) // [1, 2, 3, 1, 2, 3, 4, 2, 3, 4]
+```
+
+# 对象的深拷贝 浅拷贝
+
+- 对象的浅拷贝
+
+```js
+function extend(a, b) {
+  for (var key in a) {
+    b[key] = a[key]
+  }
+}
+```
+
+- 对象的深拷贝
 
 实现一个对象的深拷贝函数，需要考虑对象的元素类型以及对应的解决方案：
 
@@ -861,204 +978,6 @@ console.log(Array.isArray(a.arr[0])) // output: true
 //这样拷贝后虽然值没问题，但是 array 的元素会被转化为 object。这显然是错误的做法。
 ```
 
-> 浅拷贝
-
-```js
-function extend(a, b) {
-  for (var key in a) {
-    b[key] = a[key]
-  }
-}
-```
-
-# 任务并行完成
-
-# 三角形 扇形
-
-> 三角形
-
-```css
-div {
-  width: 0;
-  height: 0;
-  border: 100px solid transparent;
-  border-left-color: red;
-}
-```
-
-> 扇形
-
-```css
-div {
-  height: 0;
-  width: 0;
-  border: 100px solid transparent;
-  border-radius: 50%;
-  border-left-color: red;
-}
-```
-
-# 实现圆形可点击区域
-
-方法 1：
-
-> 设置 div 的 border-radius:50%。
-
-```css
-#circle {
- background: red;
- width: 100px;
- height: 100px;
- border-radius: 50%;
-}
-
-<div id="circle"></div>
-```
-
-方法 2：
-
-> \<img>通过 usemap 映射到\<map>的 circle 形\<area>。
-
-```html
-<img src="images/lanlvseImg.png" usemap="#Map" />
-<map name="Map" id="Map">
-  <area
-    shape="circle"
-    coords="100,100,50"
-    href="http://www.baidu.com"
-    rel="external nofollow"
-    target="_blank"
-  />
-</map>
-```
-
-方法 3：
-JS 实现，获取鼠标点击位置坐标，判断其到圆点的距离是否不大于圆的半径，来判断点击位置是否在圆内。
-
-```js
-document.onclick = function (e) {
-  var r = 50
-  var x1 = 100,
-    y1 = 100 // 圆心坐标
-  var x = e.clientX,
-    y = e.clientY
-  var distance = Math.abs(Math.sqrt(Math.pow(x - x1, 2) + Math.pow(y - y1, 2)))
-  if (distance < r) {
-    alert('OK')
-  }
-}
-```
-
-# 实现一个 flatten 函数（数组降维）
-
-> 方法一：Array.prototype.flat()
-
-```js
-var arr1 = [1, 2, [3, 4]]
-arr1.flat()
-// [1, 2, 3, 4]
-
-var arr2 = [1, 2, [3, 4, [5, 6]]]
-arr2.flat()
-// [1, 2, 3, 4, [5, 6]]
-
-var arr3 = [1, 2, [3, 4, [5, 6]]]
-arr3.flat(2)
-// [1, 2, 3, 4, 5, 6]
-
-//使用 Infinity，可展开任意深度的嵌套数组
-var arr4 = [1, 2, [3, 4, [5, 6, [7, 8, [9, 10]]]]]
-arr4.flat(Infinity)
-// [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-```
-
-> 方法二：reduce + concat + isArray + recursivity
-
-```js
-// 使用 reduce、concat 和递归展开无限多层嵌套的数组
-var arr1 = [1, 2, 3, [1, 2, 3, 4, [2, 3, 4]]]
-
-function flatDeep(arr, d = 1) {
-  return d > 0
-    ? arr.reduce(
-        (acc, val) =>
-          acc.concat(Array.isArray(val) ? flatDeep(val, d - 1) : val),
-        []
-      )
-    : arr.slice()
-}
-
-flatDeep(arr1, Infinity)
-// [1, 2, 3, 1, 2, 3, 4, 2, 3, 4]
-```
-
-> 方法三：forEach+isArray+push+recursivity
-
-```js
-// forEach 遍历数组会自动跳过空元素
-const eachFlat = (arr = [], depth = 1) => {
-  const result = [] // 缓存递归结果
-  // 开始递归
-  ;(function flat(arr, depth) {
-    // forEach 会自动去除数组空位
-    arr.forEach((item) => {
-      // 控制递归深度
-      if (Array.isArray(item) && depth > 0) {
-        // 递归数组
-        flat(item, depth - 1)
-      } else {
-        // 缓存元素
-        result.push(item)
-      }
-    })
-  })(arr, depth)
-  // 返回递归结果
-  return result
-}
-
-// for of 循环不能去除数组空位，需要手动去除
-const forFlat = (arr = [], depth = 1) => {
-  const result = []
-  ;(function flat(arr, depth) {
-    for (let item of arr) {
-      if (Array.isArray(item) && depth > 0) {
-        flat(item, depth - 1)
-      } else {
-        // 去除空元素，添加非undefined元素
-        item !== void 0 && result.push(item)
-      }
-    }
-  })(arr, depth)
-  return result
-}
-```
-
-> 方法四：使用堆栈 stack
-
-```js
-// 无递归数组扁平化，使用堆栈
-// 注意：深度的控制比较低效，因为需要检查每一个值的深度
-// 也可能在 shift / unshift 上进行 w/o 反转，但是末端的数组 OPs 更快
-var arr1 = [1, 2, 3, [1, 2, 3, 4, [2, 3, 4]]]
-function flatten(input) {
-  const stack = [...input]
-  const res = []
-  while (stack.length) {
-    // 使用 pop 从 stack 中取出并移除值
-    const next = stack.pop()
-    if (Array.isArray(next)) {
-      // 使用 push 送回内层数组中的元素，不会改动原始输入
-      stack.push(...next)
-    } else {
-      res.push(next)
-    }
-  }
-  // 反转恢复原数组的顺序
-  return res.reverse()
-}
-flatten(arr1) // [1, 2, 3, 1, 2, 3, 4, 2, 3, 4]
-```
-
 # 手写一个单例模式
 
 单例模式的定义是：保证一个类仅有一个一个实例，并提供一个访问它的全局访问点。
@@ -1140,16 +1059,16 @@ var events = (function () {
 
 # 对一个页面打印所有的结点类型和结点名称
 
-```js
-var nodes = document.getElementsByTagName('*')
-;[...nodes].forEach((node) => {
+```JavaScript
+var nodes = [...document.getElementsByTagName('*')];
+nodes.forEach((node) => {
   console.log(node.nodeType, node.nodeName)
 })
 ```
 
 # 异步输出结果
 
-```js
+```JavaScript
 async function async1() {
   console.log('async1 start')
   await async2()
@@ -1182,4 +1101,84 @@ script end
 async1 end
 promise2
 setTimeout
+```
+
+# 水平垂直居中
+
+# 三栏布局实现（圣杯布局，双飞燕）
+
+# 三角形 扇形
+
+> 三角形
+
+```css
+div {
+  width: 0;
+  height: 0;
+  border: 100px solid transparent;
+  border-left-color: red;
+}
+```
+
+> 扇形
+
+```css
+div {
+  height: 0;
+  width: 0;
+  border: 100px solid transparent;
+  border-radius: 50%;
+  border-left-color: red;
+}
+```
+
+# 实现圆形可点击区域
+
+方法 1：
+
+> 设置 div 的 border-radius:50%。
+
+```css
+#circle {
+ background: red;
+ width: 100px;
+ height: 100px;
+ border-radius: 50%;
+}
+
+<div id="circle"></div>
+```
+
+方法 2：
+
+> \<img>通过 usemap 映射到\<map>的 circle 形\<area>。
+
+```html
+<img src="images/lanlvseImg.png" usemap="#Map" />
+<map name="Map" id="Map">
+  <area
+    shape="circle"
+    coords="100,100,50"
+    href="http://www.baidu.com"
+    rel="external nofollow"
+    target="_blank"
+  />
+</map>
+```
+
+方法 3：
+JS 实现，获取鼠标点击位置坐标，判断其到圆点的距离是否不大于圆的半径，来判断点击位置是否在圆内。
+
+```js
+document.onclick = function (e) {
+  var r = 50
+  var x1 = 100,
+    y1 = 100 // 圆心坐标
+  var x = e.clientX,
+    y = e.clientY
+  var distance = Math.abs(Math.sqrt(Math.pow(x - x1, 2) + Math.pow(y - y1, 2)))
+  if (distance < r) {
+    alert('OK')
+  }
+}
 ```
