--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -801,12 +801,12 @@ flatDeep(arr1, Infinity)
 
 - 方法三：forEach+isArray+push+recursivity
 
-```js
+```JavaScript
 // forEach 遍历数组会自动跳过空元素
 const eachFlat = (arr = [], depth = 1) => {
-  const result = [] // 缓存递归结果
+  const result = []; // 缓存递归结果
   // 开始递归
-  ;(function flat(arr, depth) {
+  (function flat(arr, depth) {
     // forEach 会自动去除数组空位
     arr.forEach((item) => {
       // 控制递归深度
@@ -825,8 +825,8 @@ const eachFlat = (arr = [], depth = 1) => {
 
 // for of 循环不能去除数组空位，需要手动去除
 const forFlat = (arr = [], depth = 1) => {
-  const result = []
-  ;(function flat(arr, depth) {
+  const result = [];
+  (function flat(arr, depth) {
     for (let item of arr) {
       if (Array.isArray(item) && depth > 0) {
         flat(item, depth - 1)
