--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -758,7 +758,7 @@ function curry(fn, ...args) {
 
 # 实现一个 flatten 函数（数组降维）
 
-- 方法一：Array.prototype.flat()
+- 方法 1：Array.prototype.flat()
 
 ```js
 var arr1 = [1, 2, [3, 4]]
@@ -779,27 +779,52 @@ arr4.flat(Infinity)
 // [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
 ```
 
-- 方法二：reduce + concat + isArray + recursivity
+- 方法 2：使用栈
 
 ```js
-// 使用 reduce、concat 和递归展开无限多层嵌套的数组
-var arr1 = [1, 2, 3, [1, 2, 3, 4, [2, 3, 4]]]
+// 无递归数组扁平化，使用堆栈
+// 注意：深度的控制比较低效，因为需要检查每一个值的深度
+// 也可能在 shift / unshift 上进行 w/o 反转，但是末端的数组 OPs 更快
+function flatten(arr) {
+  const stack = [...arr]
+  const res = []
+  while (stack.length) {
+    // 使用 pop 从 stack 中取出并移除值
+    const next = stack.pop()
+    if (Array.isArray(next)) {
+      // 使用 push 送回内层数组中的元素，不会改动原始输入
+      stack.push(...next)
+    } else {
+      res.unshift(next)
+    }
+  }
+  return res
+}
 
+//test
+var arr1 = [1, 2, 3, [1, 2, 3, 4, [2, 3, 4]], [2, 3], 4, 5]
+flatten(arr1) // [1, 2, 3, 1, 2, 3, 4, 2, 3, 4, 2, 3, 4, 5]
+```
+
+- 方法 3：reduce + concat + isArray + recursivity
+
+```JavaScript
+// 使用 reduce、concat 和递归展开无限多层嵌套的数组
 function flatDeep(arr, d = 1) {
   return d > 0
     ? arr.reduce(
         (acc, val) =>
-          acc.concat(Array.isArray(val) ? flatDeep(val, d - 1) : val),
-        []
-      )
+          acc.concat(Array.isArray(val) ? flatDeep(val, d - 1) : val), [])
     : arr.slice()
 }
 
+// test
+var arr1 = [1, 2, 3, [1, 2, 3, 4, [2, 3, 4]]]
 flatDeep(arr1, Infinity)
 // [1, 2, 3, 1, 2, 3, 4, 2, 3, 4]
 ```
 
-- 方法三：forEach+isArray+push+recursivity
+- 方法 4：forEach+isArray+push+recursivity
 
 ```JavaScript
 // forEach 遍历数组会自动跳过空元素
@@ -840,102 +865,52 @@ const forFlat = (arr = [], depth = 1) => {
 }
 ```
 
-- 方法四：使用堆栈 stack
-
-```js
-// 无递归数组扁平化，使用堆栈
-// 注意：深度的控制比较低效，因为需要检查每一个值的深度
-// 也可能在 shift / unshift 上进行 w/o 反转，但是末端的数组 OPs 更快
-var arr1 = [1, 2, 3, [1, 2, 3, 4, [2, 3, 4]]]
-function flatten(input) {
-  const stack = [...input]
-  const res = []
-  while (stack.length) {
-    // 使用 pop 从 stack 中取出并移除值
-    const next = stack.pop()
-    if (Array.isArray(next)) {
-      // 使用 push 送回内层数组中的元素，不会改动原始输入
-      stack.push(...next)
-    } else {
-      res.push(next)
-    }
-  }
-  // 反转恢复原数组的顺序
-  return res.reverse()
-}
-flatten(arr1) // [1, 2, 3, 1, 2, 3, 4, 2, 3, 4]
-```
-
 # 对象的深拷贝 浅拷贝
 
-- 对象的浅拷贝
+- 浅拷贝
 
 ```js
-function extend(a, b) {
-  for (var key in a) {
-    b[key] = a[key]
-  }
+// 方法1：原生的Object.assign(target, src)方法来实现浅拷贝
+var a = {
+  name: 'Lee',
+  age: 18,
+  sex: 'male',
 }
-```
-
-- 对象的深拷贝
-
-实现一个对象的深拷贝函数，需要考虑对象的元素类型以及对应的解决方案：
-
-- 基础类型：这种最简单，直接赋值即可
-- 对象类型：递归调用拷贝函数
-- 数组类型：这种最难，因为数组中的元素可能是基础类型、对象还可能数组，因此要专门做一个函数来处理数组的深拷贝
-
-```js
-/**
- * 数组的深拷贝函数
- * @param {Array} src
- * @param {Array} target
- */
-function cloneArr(src, target) {
-  for (let item of src) {
-    if (Array.isArray(item)) {
-      target.push(cloneArr(item, []))
-    } else if (typeof item === 'object') {
-      target.push(deepClone(item, {}))
-    } else {
-      target.push(item)
-    }
-  }
-  return target
-}
-
-/**
- * 对象的深拷贝实现
- * @param {Object} src
- * @param {Object} target
- * @return {Object}
- */
-function deepClone(src, target) {
-  const keys = Reflect.ownKeys(src)
-  let value = null
-
-  for (let key of keys) {
-    value = src[key]
-
-    if (Array.isArray(value)) {
-      target[key] = cloneArr(value, [])
-    } else if (typeof value === 'object') {
-      // 如果是对象而且不是数组, 那么递归调用深拷贝
-      target[key] = deepClone(value, {})
-    } else {
-      target[key] = value
-    }
-  }
-
-  return target
-}
+console.log(Object.assign({}, a)) // {name: "Lee", age: 18, sex: "male"}
+// 注意这个方法target对象是第一个参数
 ```
 
 ```js
-// 因为考虑很周全，请看下面的测试用例：
-// 这个对象a是一个囊括以上所有情况的对象
-let a = {
+// 方法2：
+function shallowClone(obj) {
+  if (!obj || typeof obj !== 'object') return
+  let newObj = Array.isArray(obj) ? [] : {}
+  for (let key in obj) {
+    if (obj.hasOwnProperty(key)) {
+      newObj[key] = obj[key]
+    }
+  }
+  return newObj
+}
+```
+
+- 深拷贝
+
+```js
+function deepClone(obj) {
+  if (!obj || typeof obj !== 'object') return
+  let newObj = Array.isArray(obj) ? [] : {}
+  for (let key in obj) {
+    if (obj.hasOwnProperty(key)) {
+      newObj[key] =
+        typeof obj[key] === 'object' ? deepClone(obj[key]) : obj[key]
+    }
+  }
+  return newObj
+}
+
+// test
+let obj = {
   age: 1,
   jobs: {
     first: 'FE',
@@ -961,21 +936,7 @@ let a = {
     ],
   ],
 }
-
-let b = {}
-deepClone(a, b)
-
-a.jobs.first = 'native'
-a.schools[0].name = 'SZU'
-a.arr[0][0].value = '100'
-
-console.log(a.jobs.first, b.jobs.first) // output: native FE
-console.log(a.schools[0], b.schools[0]) // output: { name: 'SZU' } { name: 'shenda' }
-console.log(a.arr[0][0].value, b.arr[0][0].value) // output: 100 1
-console.log(Array.isArray(a.arr[0])) // output: true
-//看到测试用例，应该会有人奇怪为什么最后要输出Array.isArray(a.arr[0])。
-//这主要是因为网上很多实现方法没有针对 array 做处理，直接将其当成 object
-//这样拷贝后虽然值没问题，但是 array 的元素会被转化为 object。这显然是错误的做法。
+console.log(deepClone(obj))
 ```
 
 # 手写一个单例模式
@@ -1067,11 +1028,12 @@ nodes.forEach((node) => {
 ```
 
 # 异步输出结果
-
+- await后面接一个会return new promise的函数并执行它
+- 
 ```JavaScript
 async function async1() {
   console.log('async1 start')
-  await async2()
+  await async2() // 会返回一个promise
   console.log('async1 end')
 }
 async function async2() {
