--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -1,6 +1,6 @@
 [toc]
 
-# 实现一个闭包
+# 手写一个闭包
 
 > 闭包小案例
 
@@ -108,7 +108,7 @@ var throttleRun = throttle(() => {
 window.addEventListener('mousemove', throttleRun)
 ```
 
-# 实现一个 count 函数
+# 手写一个 count 函数
 
 每次调用一个函数自动加 1
 
@@ -131,7 +131,7 @@ count() // 2
 count() // 3
 ```
 
-# 实现一个 sleep 睡眠函数
+# 手写一个 sleep 睡眠函数
 
 比如 sleep(1000)代表等待 1000ms
 
@@ -502,7 +502,7 @@ MyPromise.prototype.then = function (onResolved, onRejected) {
 }
 ```
 
-# Ajax
+# 手写一个 Ajax
 
     AJAX 包括以下几个步骤
     1.  创建 XMLHttpRequest 对象，也就是创建一个异步调用对象
@@ -756,7 +756,7 @@ function curry(fn, ...args) {
 }
 ```
 
-# 实现一个 flatten 函数（数组降维）
+# 手写一个 flatten 函数（数组降维）
 
 - 方法 1：Array.prototype.flat()
 
@@ -865,7 +865,7 @@ const forFlat = (arr = [], depth = 1) => {
 }
 ```
 
-# 对象的深拷贝 浅拷贝
+# 深拷贝 浅拷贝
 
 - 浅拷贝
 
@@ -895,6 +895,14 @@ function shallowClone(obj) {
 ```
 
 - 深拷贝
+
+一行代码：
+
+```js
+let newObj = JSON.parse(JSON.stringify(oldObj))
+```
+
+函数：
 
 ```js
 function deepClone(obj) {
@@ -1015,8 +1023,123 @@ var events = (function () {
   }
 })()
 ```
+ES6写法：
+
+```js
+class Events {
+  constructor() {
+    this.events = {}
+  }
+  subscribe(eventName, callback) {
+    if (this.events[eventName]) {
+      this.events[eventName] = [callback]
+    } else {
+      this.events[eventName].push(callback)
+    }
+  }
+
+  publish(eventName) {
+    if (this.events[eventName]) {
+      this.events[eventName].forEach((callback) => callback())
+    }
+  }
+
+  reomve(eventName, callback) {
+    if (this.events[eventName]) {
+      this.events[eventName] = this.events[eventName].filter(
+        (fn) => fn !== callback
+      )
+    }
+  }
+
+  reomveAll(eventName) {
+    if (this.events[eventName]) {
+      this.events[eventName] = []
+    }
+  }
+}
+```
 
 # 手写一个发布订阅模式
+
+```js
+// 发布订阅模式
+class EventEmitter {
+  constructor() {
+    // 事件对象，存放订阅的名字和事件
+    this.events = {}
+  }
+  // 订阅事件的方法
+  on(eventName, callback) {
+    if (!this.events[eventName]) {
+      // 注意是数据，一个名字可以订阅多个事件函数
+      this.events[eventName] = [callback]
+    } else {
+      // 存在则push到指定数组的尾部保存
+      this.events[eventName].push(callback)
+    }
+  }
+  // 触发事件的方法
+  emit(eventName) {
+    // 遍历执行所有订阅的事件
+    this.events[eventName] && this.events[eventName].forEach((cb) => cb())
+  }
+  // 移除订阅事件
+  removeListener(eventName, callback) {
+    if (this.events[eventName]) {
+      this.events[eventName] = this.events[eventName].filter(
+        (cb) => cb != callback
+      )
+    }
+  }
+  // 只执行一次订阅的事件，然后移除
+  once(eventName, callback) {
+    // 绑定的时fn, 执行的时候会触发fn函数
+    let fn = () => {
+      callback() // fn函数中调用原有的callback
+      this.removeListener(eventName, fn) // 删除fn, 再次执行的时候之后执行一次
+    }
+    this.on(eventName, fn)
+  }
+}
+
+// test
+let em = new EventEmitter();
+let workday = 0;
+em.on("work", function() {
+    workday++;
+    console.log("work everyday");
+});
+
+em.once("love", function() {
+    console.log("just love you");
+});
+
+function makeMoney() {
+    console.log("make one million money");
+}
+em.on("money",makeMoney)；
+
+let time = setInterval(() => {
+    em.emit("work");
+    em.removeListener("money",makeMoney);
+    em.emit("money");
+    em.emit("love");
+    if (workday === 5) {
+        console.log("have a rest")
+        clearInterval(time);
+    }
+}, 1);
+
+//  输出
+//  work everyday
+//  just love you
+//  work everyday
+//  work everyday
+//  work everyday
+//  work everyday
+//  have a rest
+```
 
 # 对一个页面打印所有的结点类型和结点名称
 
@@ -1028,8 +1151,10 @@ nodes.forEach((node) => {
 ```
 
 # 异步输出结果
-- await后面接一个会return new promise的函数并执行它
-- 
+
+- await 后面接一个会 return new promise 的函数并执行它
+-
+
 ```JavaScript
 async function async1() {
   console.log('async1 start')
