--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -879,9 +879,17 @@ var a = {
 console.log(Object.assign({}, a)) // {name: "Lee", age: 18, sex: "male"}
 // 注意这个方法target对象是第一个参数
 ```
-
 ```js
-// 方法2：
+// 方法2：扩展运算符
+var a = {
+  name: 'Lee',
+  age: 18,
+  sex: 'male',
+}
+console.log({...a})
+```
+```js
+// 方法3：函数法
 function shallowClone(obj) {
   if (!obj || typeof obj !== 'object') return
   let newObj = Array.isArray(obj) ? [] : {}
