--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -4,9 +4,9 @@
 
 > 闭包小案例
 
-```js
+```JavaScript
 for (var i = 1; i < 5; i++) {
-  ;(function (j) {
+  (function (j) {
     setTimeout(function timer() {
       console.log(j)
     }, j * 1000)
@@ -879,6 +879,7 @@ var a = {
 console.log(Object.assign({}, a)) // {name: "Lee", age: 18, sex: "male"}
 // 注意这个方法target对象是第一个参数
 ```
+
 ```js
 // 方法2：扩展运算符
 var a = {
@@ -886,8 +887,9 @@ var a = {
   age: 18,
   sex: 'male',
 }
-console.log({...a})
+console.log({ ...a })
 ```
+
 ```js
 // 方法3：函数法
 function shallowClone(obj) {
@@ -1031,7 +1033,8 @@ var events = (function () {
   }
 })()
 ```
-ES6写法：
+
+ES6 写法：
 
 ```js
 class Events {
