--- a/01.浏览器/浏览器.md
+++ b/01.浏览器/浏览器.md
@@ -139,9 +139,12 @@ TCP：传输控制协议 UDP：用户数据报协议
 
 >     session是保管在服务器端的，每个用户都会产生一个session。假如并发访问的用户十分多，会产生十分多的session，耗费大量的内存。
 
-## 浏览器缓存：强缓存和协商缓存
+## 浏览器缓存过程
 
-<a href="https://segmentfault.com/a/1190000008956069">参考链接</a>
+> 参考链接：[HTTP强缓存和协商缓存](https://segmentfault.com/a/1190000008956069)
+
+浏览器缓存分为：强缓存和协商缓存
+
 在浏览器第一次发起请求时，本地无缓存，向 web 服务器发送请求，服务器起端响应请求，浏览器端缓存。在第一次请求时，服务器会将页面最后修改时间通过 Last-Modified 标识由服务器发送给客户端，客户端记录修改时间；服务器还会生成一个 Etag，并发送给客户端。
 
 ![浏览器缓存](../images/浏览器缓存.png)
@@ -150,3 +153,58 @@ TCP：传输控制协议 UDP：用户数据报协议
 
 - 浏览器请求某一资源时，会先获取该资源缓存的 header 信息，然后根据 header 中的 Cache-Control 和 Expires 来判断是否过期。若没过期则直接从缓存中获取资源信息，包括缓存的 header 的信息，所以此次请求不会与服务器进行通信。这里判断是否过期，则是强缓存相关。
 - 如果显示已过期，浏览器会向服务器端发送请求，这个请求会携带第一次请求返回的有关缓存的 header 字段信息，比如客户端会通过 If-None-Match 头将先前服务器端发送过来的 Etag 发送给服务器，服务会对比这个客户端发过来的 Etag 是否与服务器的相同，若相同，就将 If-None-Match 的值设为 false，返回状态 304，客户端继续使用本地缓存，不解析服务器端发回来的数据，若不相同就将 If-None-Match 的值设为 true，返回状态为 200，客户端重新请求服务器端返回的数据；客户端还会通过 If-Modified-Since 头将先前服务器端发过来的最后修改时间戳发送给服务器，服务器端通过这个时间戳判断客户端的页面是否是最新的，如果不是最新的，则返回最新的内容，如果是最新的，则返回 304，客户端继续使用本地缓存。
+
+##  强缓存 Expires 和 Cache-Control 的使用
+
+强缓存是利用http头中的Expires和Cache-Control两个字段来控制的，用来表示资源的缓存时间。强缓存中，普通刷新会忽略它，但不会清除它，需要强制刷新。浏览器强制刷新，请求会带上`Cache-Control:no-cache` 和 `Pragma:no-cache`
+
+####  Expires
+
+Expires的值是一个绝对时间的GMT格式的时间字符串。比如Expires值是：`expires:Fri, 14 Apr 2017 10:47:02 GMT`。这个时间代表这这个资源的失效时间，只要发送请求时间是在Expires之前，那么本地缓存始终有效，则在缓存中读取数据。
+
+缺点：
+由于失效的时间是一个绝对时间，所以当服务器与客户端时间偏差较大时，误差很大，就会导致缓存混乱。
+
+####  Cache-Control
+
+Cache-Control 主要是利用该字段的 `max-age` 值来进行判断，它是一个相对时间，例如`Cache-Control:max-age=3600`，代表着资源的有效期是3600秒。
+
+cache-control除了该字段外，还有下面几个比较常用的设置值：
+- no-cache：不使用本地缓存。需要使用缓存协商，先与服务器确认返回的响应是否被更改，如果之前的响应中存在ETag，那么请求的时候会与服务端验证，如果资源未被更改，则可以避免重新下载。
+- no-store：直接禁止游览器缓存数据，每次用户请求该资源，都会向服务器发送一个请求，每次都会下载完整的资源。
+- public：可以被所有的用户缓存，包括终端用户和CDN等中间代理服务器。
+- private：只能被终端用户的浏览器缓存，不允许CDN等中继缓存服务器对其缓存。
+
+Cache-Control与Expires可以在服务端配置同时启用，同时启用的时候Cache-Control优先级高。如：
+```http
+cache-control:max-age=691200
+expires:Fri, 15 May 2020 10:47:02 GMT
+```
+那么表示资源可以被缓存的最长时间为691200秒。
+
+##  协商缓存
+
+协商缓存就是由服务器来确定缓存资源是否可用，所以客户端与服务器端要通过某种标识来进行通信，从而让服务器判断请求资源是否可以缓存访问。
+
+####  Etag 和 If-None-Match
+
+`Etag/If-None-Match`返回的是一个校验码。`Etag`可以保证每一个资源是唯一的，资源变化都会导致`Etag`变化。服务器根据浏览器上送的`If-None-Match`值来判断是否命中缓存。
+
+与`Last-Modified`不一样的是，当服务器返回304 (Not Modified) 的响应时，由于`Etag`重新生成过，response header中还会把这个`Etag`返回，即使这个`Etag`跟之前的没有变化。
+
+####  Last-Modify / If-Modify-Since
+```http
+浏览器第一次请求一个资源的时候，服务器返回的header中会加上Last-Modify，Last-modify是一个时间标识该资源的最后修改时间，例如Last-Modify: Thu,31 Dec 2037 23:59:59 GMT。
+当浏览器再次请求该资源时，request的请求头中会包含If-Modify-Since，该值为缓存之前返回的Last-Modify。服务器收到If-Modify-Since后，根据资源的最后修改时间判断是否命中缓存。
+如果命中缓存，则返回304，并且不会返回资源内容，并且不会返回Last-Modify。
+```
+
+####  为什么要有Etag？
+> 两个都可以确定缓存资源的是否可用，有什么区别呢？
+
+`Etag` 的出现主要是为了解决几个 `Last-Modified` 比较难解决的问题：
+1.  一些文件也许会周期性的更改，但是他的内容并不改变(仅仅改变的修改时间)，这个时候我们并不希望客户端认为这个文件被修改了，而重新GET；
+2.  某些文件修改非常频繁，比如在秒以下的时间内进行修改，(比方说1s内修改了N次)，`If-Modified-Since` 能检查到的力度是秒级的，这种修改无法判断；
+3.  某些服务器不能精确的得到文件的最后修改时间。
+
+`Last-Modified` 与 `ETag` 是可以一起使用的，服务器会优先验证`ETag`，一致的情况下，才会继续比对 `Last-Modified`，最后才决定是否返回304。
