--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -91,12 +91,10 @@ window.addEventListener('mousemove', debounceRun)
 function throttle(fn, delay) {
   var preTime = Date.now()
   return function () {
-    var context = this
-    var args = arguments
     var nowTime = Date.now()
     if (nowTime - preTime >= delay) {
       preTime = nowTime
-      return fn.apply(context, args)
+      return fn.apply(this, arguments)
     }
   }
 }
