--- a/01.浏览器/浏览器.md
+++ b/01.浏览器/浏览器.md
@@ -42,7 +42,7 @@
 
 ## HTTP/2.0 特性
 
-<a href="https://www.zhihu.com/question/34074946">参考链接</a>
+> 参考链接:[HTTP/2 相比 1.0 有哪些重大改进？](https://www.zhihu.com/question/34074946)
 
 1. 首部压缩
 2. 多路复用
@@ -58,6 +58,19 @@ TCP：传输控制协议 UDP：用户数据报协议
 3. TCP 是面向字节流，UDP 面向报文；
 4. TCP 只能是 1 对 1 的，UDP 支持 1 对 1,1 对多；
 5. TCP 的首部较大为 20 字节，而 UDP 只有 8 字节；
+
+##  WebSocket 协议
+> 参考链接：[HTML5 WebSocket](https://www.runoob.com/html/html5-websocket.html)
+
+WebSocket 是 HTML5 开始提供的一种在单个 TCP 连接上进行全双工通讯的协议。
+
+WebSocket 使得客户端和服务器之间的数据交换变得更加简单，允许服务端主动向客户端推送数据。在 WebSocket API 中，浏览器和服务器只需要完成一次握手，两者之间就直接可以创建持久性的连接，并进行双向数据传输。
+
+现在，很多网站为了实现推送技术，所用的技术都是 Ajax 轮询。轮询是在特定的的时间间隔（如每1秒），由浏览器对服务器发出HTTP请求，然后由服务器返回最新的数据给客户端的浏览器。这种传统的模式带来很明显的缺点，即浏览器需要不断的向服务器发出请求，然而HTTP请求可能包含较长的头部，其中真正有效的数据可能只是很小的一部分，显然这样会浪费很多的带宽等资源。
+
+![websocket和ajax轮询的对比图](../images/websocket.png)
+
+应用场景:实现即时通讯:如股票交易行情分析、聊天室、在线游戏等，替代轮询和长轮询
 
 ## HTTP 请求的方式
 
@@ -85,8 +98,7 @@ TCP：传输控制协议 UDP：用户数据报协议
 
 ## 浏览器输入 URL 之后发生了什么？
 
-<a href="https://4ark.me/post/b6c7c0a2.html">参考链接</a>
-
+> 参考链接:[在浏览器输入 URL 回车之后发生了什么（超详细版）](https://4ark.me/post/b6c7c0a2.html)
 1. DNS 解析
 2. TCP 连接
 3. 发送 HTTP 请求
@@ -115,29 +127,34 @@ TCP：传输控制协议 UDP：用户数据报协议
 ## cookie 和 session 的区别
 
 1.  存储位置不同：
-    >     cookie数据存放在客户的浏览器上
 
->     session数据放在服务器上。
+> cookie数据存放在客户的浏览器上
 
-2.  存储容量不同：
-    >     单个cookie保存的数据不能超过4K，一个站点最多保存20个cookie。
+> session数据放在服务器上。
 
->     对于session来说并没有上限，但出于对服务器端的性能考虑，session内不要存放过多的东西，并且设置session删除机制。
+1.  存储容量不同：
+
+> 单个cookie保存的数据不能超过4K，一个站点最多保存20个cookie。
+
+> 对于session来说并没有上限，但出于对服务器端的性能考虑，session内不要存放过多的东西，并且设置session删除机制。
 
 3. 存储方式不同：
-   > cookie 中只能保管 ASCII 字符串，并需要通过编码方式存储为 Unicode 字符或者二进制数据。
+
+> cookie 中只能保管 ASCII 字符串，并需要通过编码方式存储为 Unicode 字符或者二进制数据。
 
 > session 中能够存储任何类型的数据，包括且不限于 string，integer，list，map 等。
 
 4.  隐私策略不同
-    >     cookie对客户端是可见的，别有用心的人可以分析存放在本地的cookie并进行cookie欺骗，所以它是不安全的。
 
->     session存储在服务器上，不存在敏感信息泄漏的风险。
+> cookie对客户端是可见的，别有用心的人可以分析存放在本地的cookie并进行cookie欺骗，所以它是不安全的。
+
+> session存储在服务器上，不存在敏感信息泄漏的风险。
 
 5.  有效期不同
-    >     cookie保管在客户端，不占用服务器资源。对于并发用户十分多的网站，cookie是很好的选择。
 
->     session是保管在服务器端的，每个用户都会产生一个session。假如并发访问的用户十分多，会产生十分多的session，耗费大量的内存。
+> cookie保管在客户端，不占用服务器资源。对于并发用户十分多的网站，cookie是很好的选择。
+
+> session是保管在服务器端的，每个用户都会产生一个session。假如并发访问的用户十分多，会产生十分多的session，耗费大量的内存。
 
 ## 浏览器缓存过程
 
