--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -502,13 +502,14 @@ MyPromise.prototype.then = function (onResolved, onRejected) {
 
 # 手写一个 Ajax
 
-    AJAX 包括以下几个步骤
-    1.  创建 XMLHttpRequest 对象，也就是创建一个异步调用对象
-    2.  创建一个新的 HTTP 请求，并指定该 HTTP 请求的方法、URL 及验证信息
-    3.  设置响应 HTTP 请求状态变化的函数
-    4.  发送 HTTP 请求
-    5.  获取异步调用返回的数据
-    6.  使用 JavaScript 和 DOM 实现局部刷新
+AJAX 包括以下几个步骤
+
+1. 创建 XMLHttpRequest 对象，也就是创建一个异步调用对象
+2. 创建一个新的 HTTP 请求，并指定该 HTTP 请求的方法、URL 及验证信息
+3. 设置响应 HTTP 请求状态变化的函数
+4. 发送 HTTP 请求
+5. 获取异步调用返回的数据
+6. 使用 JavaScript 和 DOM 实现局部刷新
 
 一般实现:
 
@@ -520,13 +521,17 @@ let xhr = new XMLHttpRequest()
 // 创建 Http 请求
 xhr.open('GET', SERVER_URL, true)
 
+// 设置请求头信息
+xhr.responseType = 'json'
+xhr.setRequestHeader('Accept', 'application/json')
+
 // 设置状态监听函数
 xhr.onreadystatechange = function () {
   if (this.readyState !== 4) return
 
   // 当请求成功时
   if (this.status === 200) {
-    handle(this.response)
+    handle(this.responseText)
   } else {
     console.error(this.statusText)
   }
@@ -536,10 +541,6 @@ xhr.onreadystatechange = function () {
 xhr.onerror = function () {
   console.error(this.statusText)
 }
-
-// 设置请求头信息
-xhr.responseType = 'json'
-xhr.setRequestHeader('Accept', 'application/json')
 
 // 发送 Http 请求
 xhr.send(null)
