--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -1,6 +1,6 @@
-[toc]
+# 面试高频手撕代码题
 
-# 手写一个闭包
+## 手写一个闭包
 
 > 闭包小案例
 
@@ -47,7 +47,7 @@ var result = sum(1)(2)
 console.log(result) // 3
 ```
 
-# 函数节流与抖动
+## 函数节流与抖动
 
 scroll 事件本身会触发页面的重新渲染，同时 scroll 事件的 handler 又会被高频度的触发, 因此事件的 handler 内部不应该有复杂操作，例如 DOM 操作就不应该放在事件处理中。
 
@@ -106,11 +106,11 @@ var throttleRun = throttle(() => {
 window.addEventListener('mousemove', throttleRun)
 ```
 
-# 手写一个 count 函数
+## 手写一个 count 函数
 
 每次调用一个函数自动加 1
 
-```
+```js
 count() 1
 count() 2
 count() 3
@@ -129,7 +129,7 @@ count() // 2
 count() // 3
 ```
 
-# 手写一个 sleep 睡眠函数
+## 手写一个 sleep 睡眠函数
 
 比如 sleep(1000)代表等待 1000ms
 
@@ -177,9 +177,9 @@ async function init() {
 init()
 ```
 
-# 实现一下继承 call apply bind
+## 实现一下继承 call apply bind
 
-## 实现 call
+### 实现 call
 
 来看下 call 的原生表现形式：
 
@@ -199,8 +199,8 @@ bar.call(foo) // 1
 
 总结如下：
 
-1.  call 改变函数 this 指向，
-2.  调用函数
+1. call 改变函数 this 指向，
+2. 调用函数
 
 思考一下：我们如何实现上面的效果呢？代码改造如下：
 
@@ -217,11 +217,9 @@ foo.bar() //1
 
 为了模拟 call 方法，我们可以这样做：
 
-1.  将函数设为某个对象的属性（或者方法）
-
-2.  通过该对象的属性调用该函数
-
-3.  删除该对象上的这个属性（或者方法）
+1. 将函数设为某个对象的属性（或者方法）
+2. 通过该对象的属性调用该函数
+3. 删除该对象上的这个属性（或者方法）
 
 代码如下：
 
@@ -262,7 +260,7 @@ test.myCall(
 
 ---
 
-## 实现 apply
+### 实现 apply
 
 apply 和 call 实现类似，只是传入的参数形式是数组形式，而不是逗号分隔的参数序列。
 
@@ -295,7 +293,7 @@ test.myApply(
 
 ---
 
-## 实现 bind
+### 实现 bind
 
 在模拟 bind 的实现之前，先看一下 bind 的使用案例：
 
@@ -350,7 +348,7 @@ bar.myBind(obj)(20, 30)
 bar.myBind(obj, 20, 30)()
 ```
 
-# 手写一个 new
+## 手写一个 new
 
 new 的作用:
 
@@ -389,7 +387,7 @@ var a2 = new A('Lee')
 console.log(a1, a2)
 ```
 
-# 手写一个 promise
+## 手写一个 promise
 
 ```js
 const PENDING = 'pending'
@@ -500,7 +498,7 @@ MyPromise.prototype.then = function (onResolved, onRejected) {
 }
 ```
 
-# 手写一个 Ajax
+## 手写一个 Ajax
 
 AJAX 包括以下几个步骤
 
@@ -588,7 +586,7 @@ function getJSON(url) {
 }
 ```
 
-# 斐波那契数列（递归，DP，循环）
+## 斐波那契数列（递归，DP，循环）
 
 - 递归
 
@@ -634,7 +632,7 @@ function fiber(n) {
 }
 ```
 
-# 数组去重
+## 数组去重
 
 - indexOf()方法
 
@@ -701,11 +699,11 @@ function quCh(arr) {
 console.log(quCh([1, 2, 3, 4, 3, 3, 3, 7, 6, 6, 9, 9]))
 ```
 
-# 函数柯里化
+## 函数柯里化
 
 [参考链接](https://github.com/mqyqingfeng/Blog/issues/42)
 
-```
+```js
 函数的柯里化：curry（又叫部分求值）
 
 把接受多个参数的函数变成接受一个参数的函数，并返回一个新的函数；
@@ -755,7 +753,7 @@ function curry(fn, ...args) {
 }
 ```
 
-# 手写一个 flatten 函数（数组降维）
+## 手写一个 flatten 函数（数组降维）
 
 - 方法 1：Array.prototype.flat()
 
@@ -864,7 +862,7 @@ const forFlat = (arr = [], depth = 1) => {
 }
 ```
 
-# 深拷贝 浅拷贝
+## 深拷贝 浅拷贝
 
 - 浅拷贝
 
@@ -956,7 +954,7 @@ let obj = {
 console.log(deepClone(obj))
 ```
 
-# 手写一个单例模式
+## 手写一个单例模式
 
 单例模式的定义是：保证一个类仅有一个一个实例，并提供一个访问它的全局访问点。
 
@@ -983,7 +981,7 @@ console.log(oA === oB) // true
 
 > static 关键字解释：类相当于实例的原型， 所有在类中定义的方法， 都会被实例继承。 如果在一个方法前， 加上 static 关键字， 就表示该方法不会被实例继承， 而是直接通过类来调用， 这就称为“ 静态方法”。
 
-# 手写一个观察者模式
+## 手写一个观察者模式
 
 ```js
 var events = (function () {
@@ -1070,7 +1068,7 @@ class Events {
 }
 ```
 
-# 手写一个发布订阅模式
+## 手写一个发布订阅模式
 
 ```js
 // 发布订阅模式
@@ -1151,7 +1149,7 @@ let time = setInterval(() => {
 //  have a rest
 ```
 
-# 对一个页面打印所有的结点类型和结点名称
+## 对一个页面打印所有的结点类型和结点名称
 
 ```JavaScript
 var nodes = [...document.getElementsByTagName('*')];
@@ -1160,10 +1158,9 @@ nodes.forEach((node) => {
 })
 ```
 
-# 异步输出结果
+## 异步输出结果
 
 - await 后面接一个会 return new promise 的函数并执行它
--
 
 ```JavaScript
 async function async1() {
@@ -1188,7 +1185,7 @@ new Promise(function (resolve) {
 console.log('script end')
 ```
 
-```
+```js
 输出：
 script start
 async1 start
@@ -1200,11 +1197,11 @@ promise2
 setTimeout
 ```
 
-# 水平垂直居中
+## 水平垂直居中
 
-# 三栏布局实现（圣杯布局，双飞燕）
+## 三栏布局实现（圣杯布局，双飞燕）
 
-# 三角形 扇形
+## 三角形 扇形
 
 > 三角形
 
@@ -1229,7 +1226,7 @@ div {
 }
 ```
 
-# 实现圆形可点击区域
+## 实现圆形可点击区域
 
 方法 1：
 
