--- a/02.数据结构与算法/数据结构与算法.md
+++ b/02.数据结构与算法/数据结构与算法.md
@@ -1,5 +1,4 @@
-[toc]
-# 常用的数据结构：
+# 常用的数据结构
 
 - 数组(Array)
 - 栈(Stack)
@@ -14,7 +13,7 @@
 
 ## 二、栈
 
-### 1.特点：
+### 1.特点
 
 > 先进先出
 
@@ -81,11 +80,11 @@ function dec2bin(decNumer) {
 
 ## 三、队列
 
-### 1.特点：
+### 1. 特点
 
 > 先进先出，只允许在表的前端（front）进行删除操作，而在表的后端（rear）进行插入操作
 
-### 2.自定义队列的完整操作
+### 2. 自定义队列的完整操作
 
 ```js
 // 自定义队列
@@ -206,11 +205,11 @@ for (var i = 0; i < size; i++) {
   var item = pQueue.dequeue();
   console.log(item.element + "----" + item.priority);
 }
-/* 
+/*
 mba----3
 cba----5
 abc----10
-nba----12 
+nba----12
 */
 ```
 
@@ -628,7 +627,7 @@ function DoublyLinkedList() {
 }
 ```
 
-## 五.集合
+## 五、集合
 
 ```js
 // 封装集合的构造函数
@@ -699,9 +698,9 @@ function Set() {
 }
 ```
 
-# 排序算法
+## 六、排序算法
 
-## 1.冒泡排序
+### 1.冒泡排序
 
 思路：
 
@@ -734,7 +733,7 @@ function bubbleSort(arr) {
 }
 ```
 
-## 2.选择排序
+### 2.选择排序
 
 思路：
 
@@ -767,7 +766,7 @@ function selectionSort(arr) {
 }
 ```
 
-## 3.插入排序
+### 3.插入排序
 
 思路：
 
@@ -807,7 +806,7 @@ function insertionSort(arr) {
 }
 ```
 
-## 4.希尔排序
+### 4.希尔排序
 
 思路：
 
@@ -849,7 +848,7 @@ function shellSort(arr) {
 }
 ```
 
-## 5.快速排序
+### 5.快速排序
 
 > 1.取基准值为数组最左边的数
 
@@ -951,15 +950,15 @@ function quickSort(arr) {
 }
 ```
 
-## 6.归并排序
+### 6.归并排序
 
 算法步骤：
 
-1.  申请空间，使其大小为两个已经排序序列之和，该空间用来存放合并后的序列；
-2.  设定两个指针，最初位置分别为两个已经排序序列的起始位置；
-3.  比较两个指针所指向的元素，选择相对小的元素放入到合并空间，并移动指针到下一位置；
-4.  重复步骤 3 直到某一指针达到序列尾；
-5.  将另一序列剩下的所有元素直接复制到合并序列尾。
+1. 申请空间，使其大小为两个已经排序序列之和，该空间用来存放合并后的序列；
+2. 设定两个指针，最初位置分别为两个已经排序序列的起始位置；
+3. 比较两个指针所指向的元素，选择相对小的元素放入到合并空间，并移动指针到下一位置；
+4. 重复步骤 3 直到某一指针达到序列尾；
+5. 将另一序列剩下的所有元素直接复制到合并序列尾。
 
 ```js
 function mergeSort(arr) {
@@ -993,7 +992,7 @@ function merge(left, right) {
 }
 ```
 
-## 7.堆排序
+### 7.堆排序
 
 堆是具有以下性质的完全二叉树：每个结点的值都大于或等于其左右孩子结点的值，称为大顶堆；
 
