--- a/01.浏览器/浏览器.md
+++ b/01.浏览器/浏览器.md
@@ -3,25 +3,25 @@
 ## HTTP 状态码
 
 1. 1XX 信息性状态码
-   100 继续
-   101 切换协议
+   - 100 继续
+   - 101 切换协议
 2. 2XX 成功状态码
-   200 OK 成功处理了请求
-   204 No Content 请求处理成功，但没有资源可返回
-   206 Partial Content 请求资源的某一部分
+   - 200 OK 成功处理了请求
+   - 204 No Content 请求处理成功，但没有资源可返回
+   - 206 Partial Content 请求资源的某一部分
 3. 3XX 重定向状态码
-   301 永久性重定向，表示请求的资源已被分配了新的 URI
-   302 临时性重定向，资源的 URL 已临时定位到其他位置
-   303 告诉客户端应该用另一个 URL 获取资源
-   304 表示客户端发送附带条件的请求 时，服务器端允许请求访问资源，但未满足条件的情况
+   - 301 永久性重定向，表示请求的资源已被分配了新的 URI
+   - 302 临时性重定向，资源的 URL 已临时定位到其他位置
+   - 303 告诉客户端应该用另一个 URL 获取资源
+   - 304 表示客户端发送附带条件的请求 时，服务器端允许请求访问资源，但未满足条件的情况
 4. 4XX 客户端错误状态码
-   400 表示请求报文中存在语法错误
-   401 未授权
-   403 服务器拒绝了请求
-   404 服务器无法找到所请求的 URL
+   - 400 表示请求报文中存在语法错误
+   - 401 未授权
+   - 403 服务器拒绝了请求
+   - 404 服务器无法找到所请求的 URL
 5. 5XX 服务器错误状态码
-   500 内部服务器错误
-   503 服务器暂时处于超负载或正在进行停机维护，现在无法处理请求。
+   - 500 内部服务器错误
+   - 503 服务器暂时处于超负载或正在进行停机维护，现在无法处理请求。
 
 ## HTTP 与 HTTPS 的区别
 
