添加新的知识点

--- a/08.面试高频手撕代码题/面试高频手撕代码题.md
+++ b/08.面试高频手撕代码题/面试高频手撕代码题.md
@@ -1276,3 +1276,11 @@ document.onclick = function (e) {
   }
 }
 ```
+
+## 如何将浮点数点左边的数每三位添加一个逗号，如 12000000.11 转化为『12,000,000.11』
+
+```js
+function format(number) {
+  return number && number.replace(/(?!^)(?=(\d{3})+\.)/g, ",");
+}
+```
